--- a/frontmatter/Preface.tex
+++ b/frontmatter/Preface.tex
@@ -7,7 +7,7 @@ This thesis was prepared at the department of Applied Mathematics and Computer S
 {
 \centering
     \thesislocation{}, \today\\[1cm]
-    \hspace{3cm}\includegraphics[scale=0.4]{Signature}\\[1cm]
+    \hspace{3cm}\includegraphics[scale=0.4]{signature.png}\\[1cm]
 \begin{flushright}
     \thesisauthor{}
 \end{flushright}
