--- a/appendices/kenton.tex
+++ b/appendices/kenton.tex
@@ -1,5 +1,5 @@
 \chapter{Kenton Productions}
-\label{sec:knet}
+\label{sec:kenton}
 \begin{itemize}
     \item {Legal name} Kenton produktions
     \item \textbf{Address} Gammel Kongevej 89 A, 2. th. 1850 Frederiksberg C
